fixed pardon message spacing

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -13,6 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 100px;
 }
 
 .i-right {
@@ -29,11 +30,10 @@
 }
 
 .i-maint-wrapper {
-  margin: 0 auto;
+  margin: 50px auto;
   background-color: #6689A6;
   display: flex;
   align-items: center;
-  margin-bottom: 50px;
   border-radius: 10px;
   padding: 25px 50px;
 }
